<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_blur"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scaleType="centerCrop">

    <LinearLayout
        android:id="@+id/phone_login_form"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_25sdp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="@dimen/_5sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/img_logo_white" />

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background_transparent"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingTop="@dimen/_30sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/phone"
                    style="@android:style/Widget.Holo.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/card_background_disabled"
                    android:hint="@string/prompt_phone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        style="@android:style/Widget.Holo.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/card_background_disabled"
                        android:fontFamily="sans-serif"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="6dp"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/phone_sign_in_button"
                    style="@style/ButtonMediumColored"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/action_sign_in_short"
                    android:textAllCaps="false" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>